# Bachelor_Thesis

./: .gitignore  20a1b326-e3b0-46d5-adb7-af5a7546e266.avif  BA.drawio  Viewer Guide — Vimba X Developer Guide 2024-1 documentation.html  ba.drawio  links.txt
code/My_Examples/aravis_cpp_example/: CMakeLists.txt  meson.build
code/My_Examples/aravis_cpp_example/src/: 04-camera-features.cpp
code/My_Examples/camcontrol/: CMakeLists.txt
code/My_Examples/camcontrol/default_cti/: libbaumer_rdma.so.1  libbgapi2_ext_sc.so.2.15  libbgapi2_ext_sc.so.2.15.2  libbgapi2_genicam.so.2.15  libbgapi2_genicam.so.2.15.2  libbgapi2_gige.cti  libbgapi2_gige.cti.2.15  libbgapi2_gige.cti.2.15.2  libbgapi2_img.so.2.15  libbgapi2_img.so.2.15.2  libbgapi2_rdma.so.2.15  libbgapi2_rdma.so.2.15.2  libbgapi2_rivermax.so.2.15  libbgapi2_rivermax.so.2.15.2  libbgapi2_usb.cti  libbgapi2_usb.cti.2.15  libbgapi2_usb.cti.2.15.2
code/My_Examples/camcontrol/gui/: CMakeLists.txt
code/My_Examples/camcontrol/gui/src/:  PtpMonitorWorker.cpp   PtpMonitorWorker.hpp  CameraSettingsWindow.cpp  CameraSettingsWindow.hpp  MainWindow.cpp  MainWindow.hpp  gui.cpp
code/My_Examples/camcontrol/html/html/: Camera_8cpp.html  Camera_8cpp_source.html  Camera_8hpp.html  Camera_8hpp__dep__incl.map  Camera_8hpp__dep__incl.md5  Camera_8hpp_source.html  DeviceManager_8cpp.html  DeviceManager_8cpp__incl.map  DeviceManager_8cpp_source.html  DeviceManager_8hpp.html  DeviceManager_8hpp__dep__incl.map  DeviceManager_8hpp__dep__incl.md5  DeviceManager_8hpp_source.html  GlobalSettings_8cpp.html  GlobalSettings_8cpp.js  GlobalSettings_8cpp__incl.map  GlobalSettings_8cpp__incl.md5  GlobalSettings_8cpp_a4e4d4e3815c368773a4dfcfc9d19666c_icgraph.md5  GlobalSettings_8cpp_ae20198dd587799aa9d5579c3597f7fb4_icgraph.map  GlobalSettings_8cpp_ae20198dd587799aa9d5579c3597f7fb4_icgraph.md5  GlobalSettings_8cpp_source.html  GlobalSettings_8hpp.html  GlobalSettings_8hpp.js  GlobalSettings_8hpp__dep__incl.map  GlobalSettings_8hpp__incl.map  GlobalSettings_8hpp__incl.md5  GlobalSettings_8hpp_a292086bff16224cc0653061c22440e60_icgraph.map  GlobalSettings_8hpp_a292086bff16224cc0653061c22440e60_icgraph.md5  GlobalSettings_8hpp_a4e4d4e3815c368773a4dfcfc9d19666c_icgraph.map  GlobalSettings_8hpp_source.html  NetworkManager_8cpp.html  NetworkManager_8cpp_source.html  NetworkManager_8hpp.html  NetworkManager_8hpp__dep__incl.map  NetworkManager_8hpp__dep__incl.md5  NetworkManager_8hpp__incl.map  NetworkManager_8hpp_source.html  StreamManager_8cpp.html  StreamManager_8cpp__incl.map  StreamManager_8cpp__incl.md5  (+413 more)
code/My_Examples/camcontrol/src/: Camera.cpp  Camera.hpp  DeviceManager.cpp  DeviceManager.hpp  GlobalSettings.cpp  GlobalSettings.hpp  NetworkManager.cpp  NetworkManager.hpp  StreamManager.cpp  StreamManager.hpp  SystemManager.cpp  SystemManager.hpp  cli.cpp
code/My_Examples/genicam_camera_communication/: CMakeLists.txt  readme.md
code/My_Examples/genicam_camera_communication/drafts/: gc_info.cc  get_info.cc
code/My_Examples/genicam_camera_communication/src/: list_devices.cc
code/My_Examples/mon_projet_rc_genicam/: CMakeLists.txt  PTP_conciderations.md  config.sh  cti_check  logs_lucid  ptp_logs
code/My_Examples/mon_projet_rc_genicam/src/: PTP_conciderations.md  Sync_free_run.cpp  bandwidth_calculator.cpp  cam_ctrl.cpp  continuous_stream.cpp  get_timestamp.cpp  gpt_multistream_exemple.cpp  list_all.cpp  log_multistream  main.cpp  ptp_ctrl.cpp  ptp_enable.cpp  ptp_with_timestamps.cpp  ros_example.cpp  sched_ac.cpp  set_feature_from_terminal.cpp  single_shot.cpp  stream.cpp  sync.cpp
code/My_Examples/refactor/: Acknowledgements.txt  CMakeLists.txt  Doxyfile  bandwidth_delays.csv  plot_ptp_offset.py  ptp_offset_history.csv  readme
code/My_Examples/refactor/docs/html/: Camera_8cpp.html  Camera_8cpp.js  Camera_8cpp__incl.map  Camera_8cpp__incl.md5  Camera_8hpp.html  Camera_8hpp__dep__incl.map  Camera_8hpp__dep__incl.md5  Camera_8hpp__incl.map  DeviceManager_8cpp.html  DeviceManager_8cpp.js  DeviceManager_8cpp_ae4a0fb4a19f9a3e0dec2c3fd87d2ebb1_icgraph.map  DeviceManager_8cpp_ae4a0fb4a19f9a3e0dec2c3fd87d2ebb1_icgraph.md5  DeviceManager_8cpp_source.html  DeviceManager_8hpp.html  DeviceManager_8hpp__dep__incl.map  DeviceManager_8hpp__incl.map  DeviceManager_8hpp__incl.md5  DeviceManager_8hpp_source.html  GlobalSettings_8cpp.html  GlobalSettings_8cpp.js  GlobalSettings_8cpp_a4e4d4e3815c368773a4dfcfc9d19666c_icgraph.md5  GlobalSettings_8cpp_source.html  GlobalSettings_8hpp.html  GlobalSettings_8hpp.js  GlobalSettings_8hpp__dep__incl.md5  GlobalSettings_8hpp_a292086bff16224cc0653061c22440e60_icgraph.map  GlobalSettings_8hpp_a292086bff16224cc0653061c22440e60_icgraph.md5  GlobalSettings_8hpp_a4e4d4e3815c368773a4dfcfc9d19666c_icgraph.map  GlobalSettings_8hpp_ae20198dd587799aa9d5579c3597f7fb4_icgraph.map  GlobalSettings_8hpp_ae20198dd587799aa9d5579c3597f7fb4_icgraph.md5  GlobalSettings_8hpp_source.html  NetworkManager_8cpp.html  NetworkManager_8cpp__incl.map  NetworkManager_8cpp__incl.md5  NetworkManager_8cpp_source.html  NetworkManager_8hpp.html  NetworkManager_8hpp__dep__incl.map  NetworkManager_8hpp_source.html  StreamManager_8cpp.html  StreamManager_8cpp__incl.md5  (+306 more)
code/My_Examples/refactor/gui/: CMakeLists.txt
code/My_Examples/refactor/gui/src/:  PtpMonitorWorker.cpp   PtpMonitorWorker.hpp  CameraSettingsWindow.cpp  CameraSettingsWindow.hpp  MainWindow.cpp  MainWindow.hpp
code/My_Examples/refactor/html/html/: Camera_8cpp.html  Camera_8cpp_source.html  Camera_8hpp.html  Camera_8hpp__incl.md5  Camera_8hpp_source.html  DeviceManager_8cpp.html  DeviceManager_8cpp__incl.md5  DeviceManager_8cpp_ae4a0fb4a19f9a3e0dec2c3fd87d2ebb1_icgraph.map  DeviceManager_8cpp_ae4a0fb4a19f9a3e0dec2c3fd87d2ebb1_icgraph.md5  (+369 more)
code/My_Examples/refactor/src/: 18.03.2025.15:57.ini  18.03.2025.19:32  Camera.cpp  Camera.hpp  DeviceManager.cpp  DeviceManager.hpp  GlobalSettings.cpp  GlobalSettings.hpp  NetworkManager.cpp  NetworkManager.hpp  StreamManager.cpp  StreamManager.hpp  SystemManager.cpp  SystemManager.hpp  Untitled-1.cpp  camera.cpp  camera.hpp  gui_main.cpp  main.cpp
(+848 files in other folders)
